; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_elog.c_get_string_attr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_elog.c_get_string_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Py_None = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8**)* @get_string_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_string_attr(i32* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32* @PyObject_GetAttrString(i32* %8, i8* %9)
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** @Py_None, align 8
  %16 = icmp ne i32* %14, %15
  br i1 %16, label %17, label %22

17:                                               ; preds = %13
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @PyString_AsString(i32* %18)
  %20 = call i8* @pstrdup(i32 %19)
  %21 = load i8**, i8*** %6, align 8
  store i8* %20, i8** %21, align 8
  br label %22

22:                                               ; preds = %17, %13, %3
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @Py_XDECREF(i32* %23)
  ret void
}

declare dso_local i32* @PyObject_GetAttrString(i32*, i8*) #1

declare dso_local i8* @pstrdup(i32) #1

declare dso_local i32 @PyString_AsString(i32*) #1

declare dso_local i32 @Py_XDECREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
